# fastapi_template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
app/common/: errors.py
app/common/dto/: __init__.py  errors.py  pagination.py
app/common/interfaces/: command.py  query.py  service.py
app/consumer/dto/: testing_variant.py
app/consumer/topics/: testing_topic.py
app/core/example/: exceptions.py
app/core/example/dto/: check_db.py
app/core/example/interfaces/: check_db.py
app/core/example/use_case/: check_db.py
app/infrastructure/: config.py  tracing.py
app/infrastructure/db/: session.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/queries/: example.py
app/infrastructure/http/: services.py
app/infrastructure/ioc/: commands_container.py  container.py  gateways.py  kafka_container.py  queries_container.py  use_cases_container.py
app/infrastructure/kafka/: app.py  registry.py  serializer.py
app/libs/httpx_backoff/clients/: on_predicate.py
app/web/: callbacks.py  errors.py  handlers.py  main.py  middlewares.py
app/web/api/v1/example/: router.py
app/web/healthcheck/: commander.py  commands.py  handler.py  router.py
tests/: conftest.py
tests/unit/app/queries/: test_entity_name.py
tests/unit/core/usecases/: test_entity_name.py
tests/unit/factories/: entity_name.py
tests/unit/healthcheck/: conftest.py
tests/utils/: api_client.py
